--- a/style.css
+++ b/style.css
@@ -20,6 +20,21 @@
     margin: 0 5px;
 
 }
+.reset-button {
+    font-size: 20px;
+    padding: 10px 20px;
+    border: 0;
+    background-color: #000;
+    color: #fff;
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: 5px;
+    margin: 0 5px;
+
+}
+/* .none { 
+    display: none;
+}*/
 
 .button:hover {
     opacity: 0.8;
