--- a/style.css
+++ b/style.css
@@ -2,11 +2,15 @@
     text-align: center;
     border: 2px solid #000;
     padding: 20px;
+    position: relative;
+    /* width: 300px;
+    height: 200px; */
 }
 .counter-number {
     font-size: 50px;
     margin-bottom: 10px;
 }
+
 
 .button {
     font-size: 20px;
@@ -30,11 +34,8 @@
     cursor: pointer;
     border-radius: 5px;
     margin: 0 5px;
-
+    position: absolute;
 }
-/* .none { 
-    display: none;
-}*/
 
 .button:hover {
     opacity: 0.8;
