--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
 .counter {
     text-align: center;
+    margin: 0 auto;
     border: 2px solid #000;
     padding: 20px;
     position: relative;
-    /* width: 300px;
-    height: 200px; */
+    width: 450px;
+    height: 250px;
 }
 .counter-number {
     font-size: 50px;
     margin-bottom: 10px;
 }
-
 
 .button {
     font-size: 20px;
@@ -21,8 +21,6 @@
     font-weight: bold;
     cursor: pointer;
     border-radius: 5px;
-    margin: 0 5px;
-
 }
 .reset-button {
     font-size: 20px;
@@ -33,8 +31,11 @@
     font-weight: bold;
     cursor: pointer;
     border-radius: 5px;
-    margin: 0 5px;
     position: absolute;
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
 }
 
 .button:hover {
